style: adjust spacing of headers, and wording of some descriptions throughout

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="mx-auto my-16 max-w-3xl px-4">
   <div class="mb-24">
-    <div class="mt-10 space-y-2 pb-6">
+    <div class="mt-10 pb-6">
       <h1 class="heading">Search</h1>
       <p class="text-soft">Find new teams or members you are connected with.</p>
     </div>
