--- a/app/views/teams/forms/_edit_settings.html.erb
+++ b/app/views/teams/forms/_edit_settings.html.erb
@@ -1,4 +1,4 @@
-<div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
+<div class="pb-6 mt-10 mb-6 border-b dark:border-slate-700">
   <h1 class="heading">Team Settings</h1>
   <p class="text-soft">Set preferences for your team to match your needs.</p>
 </div>
@@ -129,7 +129,7 @@
   <div class="flex items-end justify-between flex-wrap gap-2 pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
     <div>
       <p class="form-label">Restore default settings</p>
-      <p class="my-1 help-text">Reset all settings to their defaults for a fresh start.</p>
+      <p class="text-soft text-sm">Reset all settings to their defaults for a fresh start.</p>
     </div>
     <button type="button" data-action="restore-defaults#restore" class="btn btn-sm btn-destructive btn-muted ml-auto">Reset settings</button>
   </div>
