--- a/app/views/teams/index/_other_teams.html.erb
+++ b/app/views/teams/index/_other_teams.html.erb
@@ -1,4 +1,4 @@
-<div class="pb-6 mt-10 space-y-2">
+<div class="pb-6 mt-10">
   <h1 class="heading">Find Teams</h1>
   <p class="text-soft">Find teams by team name or coach name.</p>
 </div>
