--- a/app/views/teams/show/_featured.html.erb
+++ b/app/views/teams/show/_featured.html.erb
@@ -1,4 +1,4 @@
-<div class="pb-6 mt-10 space-y-2 border-b dark:border-slate-700">
+<div class="pb-6 mt-10 border-b dark:border-slate-700">
   <h1 class="heading">Featured</h1>
   <p class="text-soft">Recent long runs and streaks by members of this team.</p>
 </div>
