--- a/app/views/teams/show/_members.html.erb
+++ b/app/views/teams/show/_members.html.erb
@@ -1,4 +1,4 @@
-<div class="mt-10 space-y-2 pb-6">
+<div class="mt-10 pb-6">
   <h1 class="heading">Team Members</h1>
   <p class="text-soft">Find team members by name.</p>
 </div>
