--- a/app/views/teams/show/_team_info.html.erb
+++ b/app/views/teams/show/_team_info.html.erb
@@ -1,4 +1,4 @@
-<div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
+<div class="pb-6 mt-10 mb-6 border-b dark:border-slate-700">
   <h1 class="heading">Team Info</h1>
   <p class="text-soft">Information and statistics about this team.</p>
 </div>
