--- a/app/views/teams/show/_trends_graphs.html.erb
+++ b/app/views/teams/show/_trends_graphs.html.erb
@@ -1,5 +1,5 @@
 <div class="mb-24">
-  <div class="pt-6 mb-6 space-y-1 border-t border-slate-200 dark:border-slate-700">
+  <div class="pt-6 mb-6 border-t border-slate-200 dark:border-slate-700">
     <h2 class="subheading">Miles <%= date_range_description.titlecase %></h2>
     <p class="text-sm text-soft">This graph shows how many miles your team ran collectively <%= date_range_description %>.</p>
   </div>
@@ -42,7 +42,7 @@
 </div>
 
 <div class="mb-24">
-  <div class="pt-6 my-6 space-y-1 border-t border-slate-200 dark:border-slate-700">
+  <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
     <h2 class="subheading">Long Runs <%= date_range_description.titlecase %></h2>
     <p class="text-sm text-soft">This graph shows how many long runs your team ran collectively <%= date_range_description %>.</p>
   </div>
