--- a/app/views/users/_edit_settings.html.erb
+++ b/app/views/users/_edit_settings.html.erb
@@ -1,4 +1,4 @@
-<div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
+<div class="pb-6 mt-10 mb-6 border-b dark:border-slate-700">
   <h1 class="heading">Settings</h1>
   <p class="text-soft">Set your preferences to optimize your experience.</p>
 </div>
@@ -45,7 +45,7 @@
 
     <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
       <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Notifications</h2>
-      <p class="text-sm text-slate-600 dark:text-slate-400">Choose which notifications you receive.</p>
+      <p class="text-sm text-slate-600 dark:text-slate-400">Choose which notifications you would like to receive.</p>
     </div>
 
     <div class="form-group">
@@ -54,7 +54,7 @@
           <span class="form-input-toggle-switch"></span>
           <%= settings_form.check_box :in_app, { checked: @user.settings(:notifications).in_app, class: 'sr-only', data: { restore_defaults_target: 'inApp', toggle_checkbox_target: 'checkbox' } }, true, false %>
         </div>
-        <%= settings_form.label :in_app, 'In app notifications', class: 'select-none text-sm text-slate-700 dark:text-slate-300' %>
+        <%= settings_form.label :in_app, 'In app notifications', class: 'select-none text-slate-700 dark:text-slate-300' %>
       </div>
     </div>
   <% end %>
@@ -62,7 +62,7 @@
   <div class="flex items-end justify-between flex-wrap gap-2 pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
     <div>
       <p class="form-label">Restore default settings</p>
-      <p class="my-1 help-text">Reset all settings to their defaults for a fresh start.</p>
+      <p class="text-soft text-sm">Reset all settings to their defaults for a fresh start.</p>
     </div>
     <button type="button" data-action="restore-defaults#restore" class="btn btn-sm btn-destructive btn-muted ml-auto">Reset settings</button>
   </div>
