--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -1,4 +1,4 @@
-<div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
+<div class="pb-6 mt-10 mb-6 border-b dark:border-slate-700">
   <h1 class="heading">Account</h1>
   <p class="text-soft">Edit your account details.</p>
 </div>
@@ -62,7 +62,7 @@
     <% end %>
   </div>
 
-  <div class="py-10 mt-6 border-t border-slate-200 dark:border-slate-700">
+  <div class="py-6 mt-6 border-t border-slate-200 dark:border-slate-700">
     <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Contact information</h2>
     <p class="text-sm text-slate-600 dark:text-slate-400">Choose whether this information will be visible to other users.</p>
   </div>
@@ -107,7 +107,7 @@
     </div>
   </div>
 
-  <div class="py-10 mt-6 border-t border-slate-200 dark:border-slate-700">
+  <div class="py-6 mt-6 border-t border-slate-200 dark:border-slate-700">
     <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Personal details</h2>
     <p class="text-sm text-slate-600 dark:text-slate-400">This information will only be visible to your coaches and other team members.</p>
   </div>
@@ -142,7 +142,7 @@
     <% end %>
   </div>
 
-  <div class="py-10 mt-6 border-t border-slate-200 dark:border-slate-700">
+  <div class="py-6 mt-6 border-t border-slate-200 dark:border-slate-700">
     <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Password</h2>
     <p class="text-sm text-slate-600 dark:text-slate-400">Leave the fields below blank if you don't want to change your password.</p>
   </div>
@@ -233,8 +233,9 @@
   </div>
 <% end %>
 
-<div class="pt-6 border-t border-slate-200 dark:border-slate-700">
-  <h2 class="mb-2 text-lg font-bold text-slate-700 dark:text-slate-200">Danger Zone</h2>
+<div class="pt-6 mb-3 border-t border-slate-200 dark:border-slate-700">
+  <h2 class="text-lg font-bold text-slate-700 dark:text-slate-200">Danger Zone</h2>
+  <p class="text-sm text-slate-600 dark:text-slate-400">Some of these options may result in data loss.</p>
 </div>
 
 <div
@@ -360,7 +361,7 @@
   >
     <div class="flex flex-col space-y-1.5 text-center sm:text-left">
       <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Account?</h2>
-      <p class="text-soft text-sm">Are you sure you want to delete your account? This is permanent. All your data will be lost, and you will no longer be able to access your account. This action cannot be undone.</p>
+      <p class="text-soft text-sm">Are you sure you want to delete your account? This is permanent. All your data will be lost, and you will no longer be able to access your account. <span class="underline underline-offset-2 font-semibold">This action cannot be undone</span>.</p>
     </div>
 
     <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
