--- a/app/views/team_memberships/edit.html.erb
+++ b/app/views/team_memberships/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="max-w-3xl px-4 mx-auto my-16 mb-24">
   <div class="mb-24">
-    <div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
+    <div class="pb-6 mt-10 mb-6 border-b dark:border-slate-700">
       <h1 class="heading">Team Membership Goals</h1>
       <p class="text-soft">Set your personal preferences for this team.</p>
     </div>
