--- a/app/views/team_settings/show.html.erb
+++ b/app/views/team_settings/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "#{@team.name} Team Settings" %>
 
 <div class="max-w-3xl px-4 mx-auto my-16 mb-24 space-y-6">
-  <div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
+  <div class="pb-6 mt-10 mb-6 border-b dark:border-slate-700">
     <h1 class="heading"><%= @team.name %> Settings</h1>
     <div class="flex flex-wrap items-center justify-between gap-2">
       <p class="text-soft">View this team&#8217;s settings and preferences.</p>
