--- a/app/views/teams/member/_member_info.html.erb
+++ b/app/views/teams/member/_member_info.html.erb
@@ -1,6 +1,6 @@
 <% member_is_current = member == current_user %>
 
-<div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
+<div class="pb-6 mt-10 mb-6 border-b dark:border-slate-700">
   <h1 class="heading">Member Info</h1>
   <p class="text-soft">Information and statistics about <%= member_is_current ? 'your' : "#{member.first_name}'s" %> participation in <%= link_to team.name, team, class: 'btn-link' %>.</p>
 </div>
