--- a/app/views/teams/forms/_edit_team.html.erb
+++ b/app/views/teams/forms/_edit_team.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <!-- Open Delete Team Modal Button -->
-    <button data-action="click->modal#open" data-modal-id="deleteTeam" class="btn btn-destructive whitespace-nowrap">
+    <button data-action="click->modal#open" data-modal-id="deleteTeam" class="btn btn-destructive whitespace-nowrap ml-auto">
       Delete team
     </button>
   </div>
