--- a/app/views/teams/shared/_delete_team_modal.html.erb
+++ b/app/views/teams/shared/_delete_team_modal.html.erb
@@ -15,11 +15,11 @@
 >
   <div class="flex flex-col space-y-1.5 text-center sm:text-left">
     <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Team?</h2>
-    <p class="text-soft text-sm">Are you sure you want to delete the team <span class="font-bold"><%= team.name %></span>? This action cannot be undone.</p>
+    <p class="text-soft text-sm">Are you sure you want to delete the team <span class="font-bold"><%= team.name %></span>? All your team&#8217;s data will be permanently deleted. <span class="underline underline-offset-2 font-semibold">This action cannot be undone</span>.</p>
   </div>
 
   <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
-    <button data-action="click->modal#close" data-modal-id="deleteTeam" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Cancel</button>
+    <button data-action="click->modal#close" data-modal-id="deleteTeam" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Keep team</button>
     <%= button_to 'Delete team',
                   team,
                   method: :delete,
