--- a/app/views/teams/shared/_leave_team_modal.html.erb
+++ b/app/views/teams/shared/_leave_team_modal.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
-    <button data-action="click->modal#close" data-modal-id="leaveTeam" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Stay</button>
+    <button data-action="click->modal#close" data-modal-id="leaveTeam" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Stay on team</button>
     <%= button_to 'Leave team',
                   leave_team_path(@team),
                   data: { turbo: false },
