--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -92,4 +92,6 @@
 
     <%= f.submit 'Sign up', data: { turbo: false }, class: 'btn btn-primary w-full' %>
   <% end %>
+
+  <%= render 'devise/shared/links' %>
 <% end %>
